--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,5 @@
+.configuracion { padding-bottom: 14px; }
+
 .bg-azul {
   background-color: #000055;
 }
@@ -12,7 +14,6 @@
   border: 1px solid gray;
   width: 30px;
   height: 20px;
-  margin-left: 8px;
   margin-right: 8px;
 }
 
