Se agrega Jquery completo y se muestra los valores de cada range

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,6 @@
-.configuracion { padding-bottom: 14px; }
+.bg-azul { background-color: #000055; }
 
-.bg-azul {
-  background-color: #000055;
-}
+.configuracion { padding-bottom: 14px; }
 
 .simulador {
   height: 91%;
