--- a/css/styles.css
+++ b/css/styles.css
@@ -21,3 +21,21 @@
   
   .legenda .d-flex p { font-size: 13px; }
 }
+
+.frameE{
+  width: 30px;
+  height: 60px;
+  border-style: solid;
+  border-width: 3px;
+  position: relative;
+  display: inline-block;
+}
+.frameR{
+  width: 30px;
+  height: 60px;
+  border-style: solid;
+  border-width: 3px;
+  position: relative;
+  display: inline-block;
+  margin-top: 459px;
+}
