--- a/css/styles.css
+++ b/css/styles.css
@@ -15,6 +15,68 @@
   margin-right: 8px;
 }
 
+#paq_1{
+  position: absolute;
+	background-color: black;
+	width: 1.5%;
+	padding: 15px 0px;
+	margin-left: 0%;
+  margin-top: 0%;
+	color: white;
+}
+
+#mov_1{
+	position: absolute;
+	background-color: red;
+	width: 1.5%;
+	padding: 15px 5px;
+	margin-left: 50%;
+	margin-top: 30%;
+	color: white;
+	display: none;
+}
+
+#paq_2{
+  position: absolute;
+	background-color: black;
+	width: 1.5%;
+	padding: 15px 0px;
+	margin-left: 2%;
+  margin-top: 0%;
+	color: white;
+}
+
+#paq_3{
+  position: absolute;
+	background-color: black;
+	width: 1.5%;
+	padding: 15px 0px;
+	margin-left: 4%;
+  margin-top: 0%;
+	color: white;
+}
+
+/*animacion css*/
+.uno{
+	animation-name: uno;
+	animation-duration: 8s;
+}
+
+@keyframes uno{
+	0% {left:-48.8%; top:-40%;}
+	50% {left:-48.8%; top:45%;}
+	100% {left:-48.8%; top:-41%;}
+}	
+
+/*.uno_1{
+
+}
+
+@keyframes uno_1{
+	0% {;}
+	100% {;}
+}*/
+
 @media (min-width: 768px) {
   .configuracion { padding-bottom: 6px; }
   
