--- a/css/styles.css
+++ b/css/styles.css
@@ -15,6 +15,19 @@
   margin-right: 8px;
 }
 
+.paquete {
+  width: 18px;
+  height: 32px;
+  border: 1px solid #000;
+  margin-left: 10px;
+  margin-top: 25px;
+}
+
+.config .form-item.disable.disabled {
+  background-color: silver;
+  border-radius: 4px;
+}
+
 @media (min-width: 768px) {
   .configuracion { padding-bottom: 6px; }
   
