--- a/css/styles.css
+++ b/css/styles.css
@@ -15,13 +15,13 @@
   margin-right: 8px;
 }
 
-/* .paquete {
+.paquete {
   width: 18px;
   height: 32px;
   border: 1px solid #000;
   margin-left: 10px;
   margin-top: 25px;
-} */
+}
 
 /* .config .form-item.disable.disabled {
   background-color: silver;
@@ -111,5 +111,5 @@
   border-width: 3px;
   position: relative;
   display: inline-block;
-  margin-top: 60vh;
+  margin-top: 47.5%;
 }
