--- a/css/styles.css
+++ b/css/styles.css
@@ -16,8 +16,8 @@
 }
 
 .paquete {
-  width: 18px;
-  height: 32px;
+  width: 30px;
+  height: 60px;
   border: 1px solid #000;
   margin-left: 10px;
   margin-top: 25px;
@@ -28,7 +28,7 @@
   border-radius: 4px;
 } */
 
-#paq_1{
+/*#paq_1{
   position: absolute;
 	background-color: black;
 	width: 30px;
