--- a/css/styles.css
+++ b/css/styles.css
@@ -80,11 +80,17 @@
 	animation-duration: 10500ms;
 }*/
 
-@keyframes uno{
-	0% {left:-47%; top:-37%;}
-	50% {left:-47%; top:45%;}
-	100% {left:-47%; top:-41%;}
-}	
+/*@keyframes uno{
+	0% {left:-47.5%; top:-40.3%;}
+	50% {left:-47.5%; top:40.3%;}
+	100% {left:-47.5%; top:-36%;}
+}*/
+
+/*@keyframes uno{
+	0% {left:-47.5%; top:-40.3%;}
+	50% {left:-47.5%; top:40.3%;}
+	100% {left:-47.5%; top:-36%;}
+}*/
 
 .dos{
 	animation-name: dos;
