--- a/css/styles.css
+++ b/css/styles.css
@@ -26,6 +26,8 @@
 #svg {
 	cursor: crosshair;
 	position: relative;
+	width: 100%;
+	height: 400px;
 	border: 1px solid black;
 	overflow: hidden;
 }
@@ -54,6 +56,8 @@ div.dscPkg {
 	font-size: 30px;
 	z-index: 10;
 	margin: 10px;
+	width: 100%;
+	height: 400px;
 }
 
 div.desc > div.bottom {
